--- a/public/assets/screen.css
+++ b/public/assets/screen.css
@@ -4,3 +4,12 @@
   height: 100px;
   width: 100px;
 }
+
+/* line 1, ../../app/assets/stylesheets/_buttons.scss */
+input[type=submit] {
+  color: white;
+  background-color: purple;
+  width: 150px;
+  height: 40px;
+  margin-bottom: 10px;
+}
