Added explanation and tidied up application rb slightly.

--- a/app/views/bricks/index.html.erb
+++ b/app/views/bricks/index.html.erb
@@ -1,4 +1,6 @@
 <h1>SUIS Bricks</h1>
+<p>This ruby on rails prototype shows how SASS modules can be joined together and then compiled at run-time with compass.</p>
+<p>Customise the generated CSS file used by this page by using the checkboxes below.</p>
 
 <%= form_tag "/bricks/generate" do %>
   <%= label_tag 'Base' %>
